cka/practice_exam/assign-pod-to-node.yaml
apiVersion: v1
kind: Pod
metadata:
 name: pod-assigned-to-node01
spec:
 nodeSelector:
  name: kube-02
 containers:
  - name: nginx
    image: nginx
