cka/practice_exam/deployment-recreate-strategy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name:  deployment-recreate-strategy
spec:
 replicas: 2
 selector:
  matchLabels:
   app: nginx
 strategy:
   type: Recreate
 template:
  metadata:
   labels:
    app: nginx
  spec:
   containers:
    - name: nginx
      image: nginx
