cka/practice_exam/deployment-rollingUpdate-strategy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: deployment-rollingupdate-strategy
spec:
 replicas: 2
 selector:
  matchLabels:
      app: nginx
 strategy: 
  type: RollingUpdate
  rollingUpdate:
   maxSurge: 20%
   maxUnavailable: 20%
 template:
  metadata:
   labels:
    app: nginx 
  spec:
    containers:
     - name: nginx
       image: nginx
