cka/practice_exam/pod-configMap-env-var.yaml
apiVersion: v1
kind: Pod
metadata:
 name: pod-configmap-env-var
spec:
 containers:
  - name: nginx
    image: nginx
