cka/practice_exam/pod-configmap-volume.yaml
apiVersion: v1
kind: Pod
metadata:
 name: pod-configmap-vol
spec:
 volumes:
  - name: vol
    configMap:
      name: vol-confmap
 containers:
  - name: nginx
    image: nginx
    volumeMounts:
      - name: vol
        mountPath: "/configdata"
