cka/practice_exam/pod-cpu-request-limit.yaml
apiVersion: v1
kind: Pod
metadata:
 name: pod-cpu-limits
 labels:
  app: cpu-tester
spec:
 containers:
  - name : nginx
    image: nginx
    resources:
     limits:
       cpu: "1"
     requests:
       cpu: "0.5"
