cka/practice_exam/pod-dns-policy.yaml
apiVersion: v1
kind: Pod
metadata:
 name: pod-dns-policy
spec:
 dnsPolicy: ClusterFirstWithHostNet
 containers:
  - name: nginx
    image: nginx
---
##configuring pod /etc/resolve.conf
apiVersion: v1
kind: Pod
metadata:
  namespace: default
  name: dns-example
spec:
  containers:
    - name: test
      image: nginx
  dnsPolicy: "None"
  dnsConfig:
    nameservers:
      - 1.2.3.4
    searches:
      - ns1.svc.cluster.local
      - my.dns.search.suffix
    options:
      - name: ndots
        value: "2"
      - name: edns0
---
# configuring hostname and subdomain
apiVersion: v1
kind: Pod
metadata:
  name: busybox2
  labels:
    name: busybox
spec:
  hostname: busybox-2
  subdomain: default-subdomain
  containers:
  - image: busybox
    command:
      - sleep
      - "3600"
    name: busybox
