cka/practice_exam/pod-emptydir-vol.yaml
apiVersion: v1
kind: Pod
metadata:
 name: pod-emptydir-vol
spec:
 volumes:
  - name: vol1
    emptyDir: {}
 containers:
  - name: nginx
    image: nginx
    volumeMounts:
     - name: vol1
       mountPath: "/data"
