cka/practice_exam/pod-initContainer.yaml
apiVersion: v1
kind: Pod
metadata:
 name: pod-initcontainer
 labels:
  app: nginx
spec:
 containers:
  - name : nginx
    image: nginx
