cka/practice_exam/pod-liveness-command.yaml
apiVersion: v1
kind: Pod
metadata:
 name: pod-liveness-command
spec:
 containers:
  - name: liveness
    image: k8s.gcr.io/busybox
    args:
     - /bin/sh
     - -c 
     - touch /tmp/healthy; sleep 30 ; rm -rf /tmp/healthy;sleep 600
    livenessProbe:
     exec:
      command:
       - cat
       - /tmp/healthy
     initialDelaySeconds: 5
     periodSeconds: 5
