cka/practice_exam/pod-memory-request-limit.yaml
apiVersion: v1
kind: Pod
metadata:
 name: pod-memory-limits
 labels:
  app: memory-tester
spec:
 containers:
  - name : mem-tester
    image: busybox:1.29
    command: ["nslookup"]
    args: ["google.com"]
    resources:
     limits:
       memory: "200Mi"
     requests:
       memory: "100Mi"
