cka/practice_exam/pod-pv-volume.yaml
apiVersion: v1
kind : PersistentVolume
metadata:
 name: pod-pv
spec:
 storageClassName: normal
 capacity:
   storage: 1Gi
 accessModes:
  - ReadWriteOnce
 hostPath:
  path: "/mnt" 
---
apiVersion: v1
kind: Pod
metadata:
 name: pod-pv-vol
spec:
 volumes:
  - name: vol
    persistentVolumeClaim:
     claimName: pod-pvc
 containers:
  - name: nginx
    image: nginx
    volumeMounts:
     - name : vol
       mountPath: "/userdata"
