cka/practice_exam/pod-secert-volume.yaml
apiVersion: v1
kind: Pod
metadata:
 name: pod-secret-volume
spec:
 volumes:
  - name : myvol
    secret:
      secretName: secret-vol
 containers:
  - name: nginx
    image: nginx
    volumeMounts:
     - name: myvol
       mountPath: "/secrets"
