cka/practice_exam/pod-secret-env-var.yaml
apiVersion: v1
kind: Pod
metadata:
 name: pod-with-secert-env-var
spec:
 containers:
  - name: nginx
    image: nginx
