cka/practice_exam/pod-security-context.yaml
apiVersion: v1
kind: Pod
metadata:
 name: pod-security-context
spec:
 securityContext:
  runAsUser: 1000
  fsGroup : 2000
 volumes:
  - name: vol1
    emptyDir: {}
 containers:
  - name: cont
    image: gcr.io/google-samples/node-hello:1.0
    volumeMounts:
     - name: vol1
       mountPath: " /data/demo"
    securityContext:
     allowPrivilegeEscalation: false
