cka/practice_exam/pod-service-account.yaml
apiVersion : v1
kind: Pod
metadata:
 name: pod-with-serviceaccount
spec:
 serviceAccountName:  pod-srv-accnt
 containers:
  - name: nginx
    image: nginx
