cka/practice_exam/pod-with-command.yaml
apiVersion: v1
kind: Pod
metadata:
 name: pod-with-command
 labels:
  app: nginx
spec:
 containers:
  - name : nginx
    image: nginx
    command: ["echo" , "'Hi from container'"]
 restartPolicy: OnFailure
