cka/practice_exam/pod-with-env.yaml
apiVersion: v1
kind: Pod
metadata:
 name: pod-with-env
 labels:
  app: nginx
spec:
 containers:
  - name : nginx
    image: nginx
