cka/practice_exam/pod.yaml
apiVersion: v1
kind: Pod
metadata:
 name: pod
 labels:
  app: nginx
spec:
 containers:
  - name : nginx
    image: nginx
