cka/practice_exam/service-clusterIp.yaml
apiVersion: v1
kind: Service
metadata:
 name: service-clusterip
spec:
 selector:
  app: nginx
 type: ClusterIP
 ports:
  - protocol: TCP
    port: 80
    targetPort: 80
