cka/practice_exam/service-externalname.yaml
apiVersion: v1
kind: Service
metadata:
 name: service-externalname
spec: 
 type: ExternalName
 externalName: "www.cnn.net"
