cka/practice_exam/service-headless.yaml
apiVersion: v1
kind: Service
metadata:
 name: service-headless
spec:
 type: ClusterIP
 clusterIP: None
 selector:
  app: nginx
