cka/practice_exam/service-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
 name: service-lb
spec:
 type: LoadBalancer
 clusterIP: 10.101.154.178
 ports:
  - protocol: TCP
    port: 80
