cka/practice_exam/service-mulitports.yaml
apiVersion: v1
kind: Service
metadata:
 name: service-mulitports
spec:
 selector:
  app: nginx
 ports:
  - name: port80
    protocol : TCP
    port: 80
    targetPort: 80
  - name: port8080
    protocol: TCP
    port: 8080
    targetPort: 80
