cka/practice_exam/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
 name: service-nodeport
spec:
 type: NodePort
 selector:
  app: nginx
 ports:
  - protocol: TCP
    port: 8090
    targetPort: 80
