cka/practice_exam/network-policy-default-allow-all-ingress.yaml
apiVersion: v1
kind: Pod
metadata:
 name: pod-frontend
 labels:
   app: nginx
   tier: frontend
spec:
 containers:
  - name: nginx
    image: nginx
---
apiVersion: v1
kind: Pod
metadata:
 name: pod-mdw
 labels:
   app: nginx
   tier: mdw
spec:
 containers:
  - name: nginx
    image: nginx
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
 name: allow-all-ingress
spec:
 podSelector: {}
 ingress:
  - {}
